@@ -6,15 +6,26 @@
  */
 package com.powsybl.nad.svg;
 
+import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.exceptions.UncheckedXmlStreamException;
 import com.powsybl.commons.xml.XmlUtil;
+import com.powsybl.diagram.util.CssUtil;
+import com.powsybl.nad.library.NadComponentLibrary;
 import com.powsybl.nad.model.*;
+import com.powsybl.nad.routing.EdgeRouting;
+import com.powsybl.nad.utils.RadiusUtils;
 import org.apache.commons.io.output.WriterOutputStream;
 import org.apache.commons.lang3.StringUtils;
 import org.jgrapht.alg.util.Pair;
+import org.w3c.dom.Element;
 
 import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamWriter;
+import javax.xml.transform.Result;
+import javax.xml.transform.Transformer;
+import javax.xml.transform.TransformerException;
+import javax.xml.transform.dom.DOMSource;
+import javax.xml.transform.sax.SAXResult;
 import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -30,8 +41,8 @@ import java.util.stream.Stream;
 public class SvgWriter {
 
     private static final String INDENT = "    ";
-    public static final String SVG_NAMESPACE_URI = "http://www.w3.org/2000/svg";
-    public static final String XHTML_NAMESPACE_URI = "http://www.w3.org/1999/xhtml";
+    private static final String SVG_NAMESPACE_URI = "http://www.w3.org/2000/svg";
+    private static final String XHTML_NAMESPACE_URI = "http://www.w3.org/1999/xhtml";
     private static final String SVG_ROOT_ELEMENT_NAME = "svg";
     private static final String STYLE_ELEMENT_NAME = "style";
     private static final String GROUP_ELEMENT_NAME = "g";
@@ -61,13 +72,16 @@ public class SvgWriter {
     private final SvgParameters svgParameters;
     private final StyleProvider styleProvider;
     private final LabelProvider labelProvider;
-    private final EdgeRendering edgeRendering;
+    private final EdgeRouting edgeRouting;
+    private final NadComponentLibrary componentLibrary;
 
-    public SvgWriter(SvgParameters svgParameters, StyleProvider styleProvider, LabelProvider labelProvider) {
+    public SvgWriter(SvgParameters svgParameters, StyleProvider styleProvider, LabelProvider labelProvider,
+                     NadComponentLibrary componentLibrary, EdgeRouting edgeRouting) {
         this.svgParameters = Objects.requireNonNull(svgParameters);
         this.styleProvider = Objects.requireNonNull(styleProvider);
         this.labelProvider = Objects.requireNonNull(labelProvider);
-        this.edgeRendering = new DefaultEdgeRendering();
+        this.componentLibrary = Objects.requireNonNull(componentLibrary);
+        this.edgeRouting = Objects.requireNonNull(edgeRouting);
     }
 
     public void writeSvg(Graph graph, Path svgFile) {
@@ -97,7 +111,7 @@ public class SvgWriter {
         Objects.requireNonNull(svgOs);
 
         // Edge coordinates need to be computed first, based on svg parameters
-        edgeRendering.run(graph, svgParameters);
+        edgeRouting.run(graph, svgParameters);
 
         try {
             XMLStreamWriter writer = XmlUtil.initializeWriter(true, INDENT, svgOs);
@@ -107,6 +121,7 @@ public class SvgWriter {
                 drawHighlightedSection(graph, writer);
             }
             drawVoltageLevelNodes(graph, writer);
+            drawInjections(graph, writer);
             drawBranchEdges(graph, writer);
             drawThreeWtEdges(graph, writer);
             drawThreeWtNodes(graph, writer);
@@ -125,6 +140,98 @@ public class SvgWriter {
         drawHighlightVoltageLevelNodes(graph, writer);
         drawHighlightBranchEdges(graph, writer);
         drawHighlightThreeWtEdges(graph, writer);
+        writer.writeEndElement();
+    }
+
+    private void drawInjections(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
+        if (graph.getBusNodesStream().mapToInt(BusNode::getInjectionCount).anyMatch(nb -> nb > 0)) {
+            writer.writeStartElement(GROUP_ELEMENT_NAME);
+            writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.INJECTIONS_CLASS);
+            for (VoltageLevelNode vlNode : graph.getVoltageLevelNodesStream().filter(VoltageLevelNode::isVisible).toList()) {
+                drawInjections(graph, vlNode, writer);
+            }
+            writer.writeEndElement();
+        }
+    }
+
+    private void drawInjections(Graph graph, VoltageLevelNode vlNode, XMLStreamWriter writer) throws XMLStreamException {
+        if (vlNode.getBusNodes().stream().mapToInt(BusNode::getInjectionCount).anyMatch(nb -> nb > 0)) {
+            writer.writeStartElement(GROUP_ELEMENT_NAME);
+            for (BusNode busNode : vlNode.getBusNodes()) {
+                drawInjections(graph, busNode, writer);
+            }
+            writer.writeEndElement();
+        }
+    }
+
+    private void drawInjections(Graph graph, BusNode busNode, XMLStreamWriter writer) throws XMLStreamException {
+        if (busNode.getInjectionCount() == 0) {
+            return;
+        }
+
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writeStyleClasses(writer, styleProvider.getBusNodeStyleClasses(busNode));
+        for (Injection injection : busNode.getInjections()) {
+            writer.writeStartElement(GROUP_ELEMENT_NAME);
+            writeId(writer, injection);
+            writeStyleClasses(writer, styleProvider.getInjectionStyleClasses(injection));
+            writeStyleAttribute(writer, styleProvider.getInjectionStyle(injection));
+            insertName(writer, injection::getName);
+            drawInjectionEdge(graph, injection, writer);
+            drawInjectionIcon(injection, writer);
+            writer.writeEndElement();
+        }
+        writer.writeEndElement();
+
+    }
+
+    private void drawInjectionEdge(Graph graph, Injection injection, XMLStreamWriter writer) throws XMLStreamException {
+        Optional<EdgeInfo> edgeInfo = labelProvider.getEdgeInfo(graph, injection);
+        writer.writeEmptyElement(POLYLINE_ELEMENT_NAME);
+        writeStyleClasses(writer, StyleProvider.EDGE_PATH_CLASS);
+        writer.writeAttribute(POINTS_ATTRIBUTE, getPolylinePointsString(injection.getEdge()));
+        if (edgeInfo.isPresent()) {
+            drawInjectionEdgeInfo(writer, injection, edgeInfo.get());
+        }
+    }
+
+    private void drawInjectionIcon(Injection injection, XMLStreamWriter writer) throws XMLStreamException {
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+
+        writer.writeEmptyElement(CIRCLE_ELEMENT_NAME);
+        double radius = svgParameters.getInjectionCircleRadius();
+        Point circleCenter = injection.getInjectionPoint().atDistance(-radius, injection.getBusNodePoint());
+        writer.writeAttribute("cx", getFormattedValue(circleCenter.getX()));
+        writer.writeAttribute("cy", getFormattedValue(circleCenter.getY()));
+        writer.writeAttribute(CIRCLE_RADIUS_ATTRIBUTE, getFormattedValue(radius));
+
+        insertSvgComponent(injection, writer);
+
+        writer.writeEndElement();
+    }
+
+    private void insertSvgComponent(Injection injection, XMLStreamWriter writer) throws XMLStreamException {
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(injection.getIconOrigin(svgParameters.getInjectionCircleRadius())));
+
+        Result result = new SAXResult(new SvgContentHandlerToXMLStreamWriter(writer));
+        String componentType = injection.getComponentType();
+        writeStyleClasses(writer, componentLibrary.getComponentStyleClass(componentType).map(List::of).orElse(List.of()));
+
+        try {
+            Transformer transformer = componentLibrary.getSvgTransformer();
+            Map<String, List<Element>> subComponents = componentLibrary.getSvgElements(componentType);
+            for (Map.Entry<String, List<Element>> scEntry : subComponents.entrySet()) {
+                List<String> edgeStyleClasses = componentLibrary.getSubComponentStyleClass(componentType, scEntry.getKey())
+                        .map(List::of).orElse(List.of());
+                writeStyleClasses(writer, edgeStyleClasses);
+                for (Element element : scEntry.getValue()) {
+                    transformer.transform(new DOMSource(element), result);
+                }
+            }
+        } catch (TransformerException e) {
+            throw new PowsyblException("Cannot insert SVG for injection of type " + injection.getType(), e);
+        }
         writer.writeEndElement();
     }
 
@@ -283,7 +390,7 @@ public class SvgWriter {
         if (edge.isVisible(side)) {
             Optional<EdgeInfo> edgeInfo = labelProvider.getEdgeInfo(graph, edge, side);
             if (!graph.isLoop(edge)) {
-                drawHalfEdge(graph, writer, edge, side, edgeInfo.orElse(null));
+                drawHalfEdge(writer, edge, side, edgeInfo.orElse(null));
             } else {
                 drawLoopEdge(writer, edge, side, edgeInfo.orElse(null));
             }
@@ -291,13 +398,13 @@ public class SvgWriter {
         writer.writeEndElement();
     }
 
-    private void drawHalfEdge(Graph graph, XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side, EdgeInfo edgeInfo) throws XMLStreamException {
+    private void drawHalfEdge(XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side, EdgeInfo edgeInfo) throws XMLStreamException {
         writer.writeEmptyElement(POLYLINE_ELEMENT_NAME);
         writeStyleClasses(writer, StyleProvider.EDGE_PATH_CLASS);
         writeStyleAttribute(writer, styleProvider.getSideEdgeStyle(edge, side));
         writer.writeAttribute(POINTS_ATTRIBUTE, getPolylinePointsString(edge, side));
         if (edgeInfo != null) {
-            drawBranchEdgeInfo(graph, writer, edge, side, edgeInfo);
+            drawBranchEdgeInfo(writer, edge, side, edgeInfo);
         }
     }
 
@@ -357,7 +464,7 @@ public class SvgWriter {
 
         Optional<EdgeInfo> edgeInfo = labelProvider.getEdgeInfo(graph, edge);
         if (edgeInfo.isPresent()) {
-            drawThreeWtEdgeInfo(graph, writer, edge, edgeInfo.get());
+            drawThreeWtEdgeInfo(writer, edge, edgeInfo.get());
         }
         writer.writeEndElement();
     }
@@ -437,16 +544,16 @@ public class SvgWriter {
         drawEdgeInfo(writer, edgeInfo, edge.getPoints(side).get(1), edge.getEdgeStartAngle(side));
     }
 
-    private void drawBranchEdgeInfo(Graph graph, XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side, EdgeInfo edgeInfo) throws XMLStreamException {
-        VoltageLevelNode vlNode = graph.getVoltageLevelNode(edge, side);
-        BusNode busNode = graph.getBusGraphNode(edge, side);
-        drawEdgeInfo(writer, edgeInfo, getArrowCenter(vlNode, busNode, edge.getPoints(side)), edge.getEdgeEndAngle(side));
+    private void drawBranchEdgeInfo(XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side, EdgeInfo edgeInfo) throws XMLStreamException {
+        drawEdgeInfo(writer, edgeInfo, edge.getArrow(side), edge.getArrowAngle(side));
     }
 
-    private void drawThreeWtEdgeInfo(Graph graph, XMLStreamWriter writer, ThreeWtEdge edge, EdgeInfo edgeInfo) throws XMLStreamException {
-        VoltageLevelNode vlNode = graph.getVoltageLevelNode(edge);
-        BusNode busNode = graph.getBusGraphNode(edge);
-        drawEdgeInfo(writer, edgeInfo, getArrowCenter(vlNode, busNode, edge.getPoints()), edge.getEdgeAngle());
+    private void drawThreeWtEdgeInfo(XMLStreamWriter writer, ThreeWtEdge edge, EdgeInfo edgeInfo) throws XMLStreamException {
+        drawEdgeInfo(writer, edgeInfo, edge.getArrowPoint(), edge.getEdgeAngle());
+    }
+
+    private void drawInjectionEdgeInfo(XMLStreamWriter writer, Injection injection, EdgeInfo edgeInfo) throws XMLStreamException {
+        drawEdgeInfo(writer, edgeInfo, injection.getArrowPoint(), injection.getAngle());
     }
 
     private void drawEdgeInfo(XMLStreamWriter writer, EdgeInfo edgeInfo, Point infoCenter, double edgeAngle) throws XMLStreamException {
@@ -553,16 +660,6 @@ public class SvgWriter {
         return new double[]{+cosRo, sinRo, -sinRo, cosRo, e1, f1};
     }
 
-    private Point getArrowCenter(VoltageLevelNode vlNode, BusNode busNode, List<Point> line) {
-        double shift = svgParameters.getArrowShift();
-        if (line.size() == 2) { // straight line; in case of a forking line it is the middle point which is the starting point
-            double nodeOuterRadius = getVoltageLevelCircleRadius(vlNode);
-            double busAnnulusOuterRadius = getBusAnnulusOuterRadius(busNode, vlNode, svgParameters);
-            shift += nodeOuterRadius - busAnnulusOuterRadius;
-        }
-        return line.get(line.size() - 2).atDistance(shift, line.get(line.size() - 1));
-    }
-
     private void draw2WtWinding(XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side) throws XMLStreamException {
         writer.writeEmptyElement(CIRCLE_ELEMENT_NAME);
         writeStyleClasses(writer, styleProvider.getSideEdgeStyleClasses(edge, side), StyleProvider.WINDING_CLASS);
@@ -602,7 +699,7 @@ public class SvgWriter {
     private void drawVoltageLevelNodes(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
         writer.writeStartElement(GROUP_ELEMENT_NAME);
         writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.VOLTAGE_LEVEL_NODES_CLASS);
-        for (VoltageLevelNode vlNode : graph.getVoltageLevelNodesStream().filter(VoltageLevelNode::isVisible).collect(Collectors.toList())) {
+        for (VoltageLevelNode vlNode : graph.getVoltageLevelNodesStream().filter(VoltageLevelNode::isVisible).toList()) {
             writer.writeStartElement(GROUP_ELEMENT_NAME);
             writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(vlNode));
             drawNode(graph, writer, vlNode);
@@ -698,6 +795,7 @@ public class SvgWriter {
                 .toList();
         for (BusNode busNode : notEmptyDescrBusNodes) {
             writer.writeStartElement(DIV_ELEMENT_NAME);
+            writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.BUS_DESCR_CLASS);
             writer.writeEmptyElement(SPAN_ELEMENT_NAME);
             writeStyleClasses(writer, styleProvider.getBusNodeStyleClasses(busNode), StyleProvider.LEGEND_SQUARE_CLASS);
             writeStyleAttribute(writer, styleProvider.getBusNodeStyle(busNode));
@@ -711,7 +809,7 @@ public class SvgWriter {
         writeStyleClasses(writer, styleProvider.getNodeStyleClasses(vlNode));
         insertName(writer, vlNode::getName);
 
-        double nodeOuterRadius = getVoltageLevelCircleRadius(vlNode);
+        double nodeOuterRadius = RadiusUtils.getVoltageLevelCircleRadius(vlNode, svgParameters);
 
         if (vlNode.hasUnknownBusNode()) {
             writer.writeEmptyElement(CIRCLE_ELEMENT_NAME);
@@ -720,11 +818,12 @@ public class SvgWriter {
             writer.writeAttribute(CIRCLE_RADIUS_ATTRIBUTE, getFormattedValue(nodeOuterRadius + svgParameters.getUnknownBusNodeExtraRadius()));
         }
 
-        List<Edge> traversingBusEdges = new ArrayList<>();
+        List<Edge> traversingEdges = new ArrayList<>();
+        List<Injection> traversingInjections = new ArrayList<>();
 
         for (BusNode busNode : vlNode.getBusNodes()) {
-            double busInnerRadius = getBusAnnulusInnerRadius(busNode, vlNode, svgParameters);
-            double busOuterRadius = getBusAnnulusOuterRadius(busNode, vlNode, svgParameters);
+            double busInnerRadius = RadiusUtils.getBusAnnulusInnerRadius(busNode, vlNode, svgParameters);
+            double busOuterRadius = RadiusUtils.getBusAnnulusOuterRadius(busNode, vlNode, svgParameters);
             if (busInnerRadius == 0) {
                 if (busNode instanceof BoundaryBusNode) {
                     // Boundary nodes are always at side two of a dangling line edge, dangling line is its only edge
@@ -736,13 +835,15 @@ public class SvgWriter {
                 }
             } else {
                 writer.writeEmptyElement(PATH_ELEMENT_NAME);
-                writer.writeAttribute(PATH_D_ATTRIBUTE, getFragmentedAnnulusPath(busInnerRadius, busOuterRadius, traversingBusEdges, graph, vlNode, busNode));
+                String path = getFragmentedAnnulusPath(busInnerRadius, busOuterRadius, traversingEdges, traversingInjections, graph, vlNode, busNode);
+                writer.writeAttribute(PATH_D_ATTRIBUTE, path);
             }
             writeId(writer, busNode);
             writeStyleClasses(writer, styleProvider.getBusNodeStyleClasses(busNode), StyleProvider.BUSNODE_CLASS);
             writeStyleAttribute(writer, styleProvider.getBusNodeStyle(busNode));
 
-            traversingBusEdges.addAll(graph.getBusEdges(busNode));
+            traversingEdges.addAll(graph.getBusEdges(busNode));
+            traversingInjections.addAll(busNode.getInjections());
         }
     }
 
@@ -753,8 +854,9 @@ public class SvgWriter {
         writer.writeAttribute(PATH_D_ATTRIBUTE, semiCircle);
     }
 
-    private String getFragmentedAnnulusPath(double innerRadius, double outerRadius, List<Edge> traversingBusEdges, Graph graph, VoltageLevelNode vlNode, BusNode busNode) {
-        if (traversingBusEdges.isEmpty()) {
+    private String getFragmentedAnnulusPath(double innerRadius, double outerRadius, List<Edge> traversingBusEdges, List<Injection> traversingInjections,
+                                            Graph graph, VoltageLevelNode vlNode, BusNode busNode) {
+        if (traversingBusEdges.isEmpty() && traversingInjections.isEmpty()) {
             String path = "M" + getCirclePath(outerRadius, 0, Math.PI, true)
                     + " M" + getCirclePath(outerRadius, Math.PI, 0, true);
             if (innerRadius > 0) { // going the other way around (counter-clockwise) to subtract the inner circle
@@ -764,7 +866,9 @@ public class SvgWriter {
             return path;
         }
 
-        List<Double> angles = createSortedTraversingAnglesList(traversingBusEdges, graph, vlNode, busNode);
+        List<Double> angles = createTraversingEdgesAnglesList(traversingBusEdges, graph, vlNode, busNode);
+        traversingInjections.forEach(ti -> angles.add(ti.getAngle()));
+        Collections.sort(angles);
 
         // adding first angle to close the circle annulus, and adding 360° to keep the list ordered
         angles.add(angles.get(0) + 2 * Math.PI);
@@ -789,7 +893,7 @@ public class SvgWriter {
         return path.toString();
     }
 
-    private List<Double> createSortedTraversingAnglesList(List<Edge> traversingBusEdges, Graph graph, VoltageLevelNode vlNode, BusNode busNode) {
+    private List<Double> createTraversingEdgesAnglesList(List<Edge> traversingBusEdges, Graph graph, VoltageLevelNode vlNode, BusNode busNode) {
         List<Double> angles = new ArrayList<>(traversingBusEdges.size());
         for (Edge edge : traversingBusEdges) {
             Node node1 = graph.getNode1(edge);
@@ -806,8 +910,6 @@ public class SvgWriter {
                 angles.add(getEdgeStartAngle(edge, node1 == vlNode ? BranchEdge.Side.ONE : BranchEdge.Side.TWO));
             }
         }
-        Collections.sort(angles);
-
         return angles;
     }
 
@@ -856,16 +958,15 @@ public class SvgWriter {
         writer.writeStartElement(GROUP_ELEMENT_NAME);
         writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.TEXT_EDGES_CLASS);
         for (TextEdge edge : graph.getTextEdges()) {
-            drawTextEdge(writer, edge, graph.getVoltageLevelNode(edge));
+            drawTextEdge(writer, edge);
         }
         writer.writeEndElement();
     }
 
-    private void drawTextEdge(XMLStreamWriter writer, TextEdge edge, VoltageLevelNode vlNode) throws XMLStreamException {
+    private void drawTextEdge(XMLStreamWriter writer, TextEdge edge) throws XMLStreamException {
         writer.writeEmptyElement(POLYLINE_ELEMENT_NAME);
         writeId(writer, edge);
         List<Point> points = edge.getPoints();
-        shiftEdgeStart(points, vlNode);
         String lineFormatted1 = points.stream()
                 .map(point -> getFormattedValue(point.getX()) + "," + getFormattedValue(point.getY()))
                 .collect(Collectors.joining(" "));
@@ -893,11 +994,6 @@ public class SvgWriter {
 
     private void writeId(XMLStreamWriter writer, Identifiable identifiable) throws XMLStreamException {
         writer.writeAttribute(ID_ATTRIBUTE, getPrefixedId(identifiable.getDiagramId()));
-    }
-
-    private void shiftEdgeStart(List<Point> points, VoltageLevelNode vlNode) {
-        double circleRadius = getVoltageLevelCircleRadius(vlNode);
-        points.set(0, points.get(0).atDistance(circleRadius, points.get(1)));
     }
 
     private void addSvgRoot(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
@@ -953,14 +1049,16 @@ public class SvgWriter {
         switch (svgParameters.getCssLocation()) {
             case INSERTED_IN_SVG:
                 writer.writeStartElement(STYLE_ELEMENT_NAME);
-                writer.writeCData(styleProvider.getStyleDefs());
+                String cssContent = CssUtil.getFilesContent(styleProvider.getCssUrls())
+                        + CssUtil.getFilesContent(componentLibrary.getCssUrls());
+                writer.writeCData(cssContent);
                 writer.writeEndElement();
                 break;
             case EXTERNAL_IMPORTED:
                 writer.writeStartElement(STYLE_ELEMENT_NAME);
-                for (String cssFilename : styleProvider.getCssFilenames()) {
-                    writer.writeCharacters("@import url(" + cssFilename + ");");
-                }
+                String cssImports = CssUtil.getImportCssString(styleProvider.getCssFilenames())
+                        + CssUtil.getImportCssString(componentLibrary.getCssFilenames());
+                writer.writeCharacters(cssImports);
                 writer.writeEndElement();
                 break;
             case EXTERNAL_NO_IMPORT:
@@ -971,33 +1069,6 @@ public class SvgWriter {
 
     private static String getFormattedValue(double value) {
         return String.format(Locale.US, "%.2f", value);
-    }
-
-    protected double getVoltageLevelCircleRadius(VoltageLevelNode vlNode) {
-        return getVoltageLevelCircleRadius(vlNode, svgParameters);
-    }
-
-    protected static double getVoltageLevelCircleRadius(VoltageLevelNode vlNode, SvgParameters svgParameters) {
-        if (vlNode.isFictitious()) {
-            return svgParameters.getFictitiousVoltageLevelCircleRadius();
-        }
-        int nbBuses = vlNode.getBusNodes().size();
-        return Math.min(Math.max(nbBuses, 1), 2) * svgParameters.getVoltageLevelCircleRadius();
-    }
-
-    public static double getBusAnnulusInnerRadius(BusNode node, VoltageLevelNode vlNode, SvgParameters svgParameters) {
-        if (node.getRingIndex() == 0) {
-            return 0;
-        }
-        int nbNeighbours = node.getNbNeighbouringBusNodes();
-        double unitaryRadius = SvgWriter.getVoltageLevelCircleRadius(vlNode, svgParameters) / (nbNeighbours + 1);
-        return node.getRingIndex() * unitaryRadius + svgParameters.getInterAnnulusSpace() / 2;
-    }
-
-    public static double getBusAnnulusOuterRadius(BusNode node, VoltageLevelNode vlNode, SvgParameters svgParameters) {
-        int nbNeighbours = node.getNbNeighbouringBusNodes();
-        double unitaryRadius = SvgWriter.getVoltageLevelCircleRadius(vlNode, svgParameters) / (nbNeighbours + 1);
-        return (node.getRingIndex() + 1) * unitaryRadius - svgParameters.getInterAnnulusSpace() / 2;
     }
 
     public String getPrefixedId(String id) {
